src/app/layout/tabbar/components/tabbar.component.scss
@import '~style/common';

:host {
  position: sticky;
  bottom: 0;
  width: 100%;
  z-index: $tabbar-z-index;
}

.TabBar {
  display: flex;
  background-color: $white;
  border-top: 1px solid $blue-grey-5;
  min-height: 64px;
  @supports (padding: unquote('max(0px)')) {
    padding-bottom: unquote('max(#{10px}, env(safe-area-inset-bottom))');
  }
  svg {
    transition: opacity 250ms ease;
    -webkit-tap-highlight-color: rgba($white, 0.6);
    &:active {
      opacity: 0.6;
    }
  }
}

.TabBar__option {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  text-decoration: none;
  span {
    font-size: $font-size-xs;
    color: $blue-grey-3;
    line-height: 1;
    user-select: none;
  }
  &.active {
    .fill-path {
      fill: $blue-grey-1;
    }
    .fill-stroke {
      stroke: $blue-grey-1;
    }
    span {
      color: $blue-grey-1;
    }
    .TabBar__option-profile .image {
      border: 2px solid $blue-grey-1;
      &:after {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border: 1px solid $white;
        border-radius: 50%;
      }
    }
  }
  &--pending {
    .TabBar__badge {
      display: block;
    }
  }
}

.TabBar__option-profile {
  width: 44px;
  height: 44px;
  padding: 7px;
  .image {
    position: relative;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }
}

.TabBar__badge {
  display: none;
  height: 8px;
  width: 8px;
  border-radius: 8px;
  background-color: $negative-main;
  position: absolute;
  top: 10px;
  right: 0px;
}

